<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="all_clear">AC</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="plus_minus">\u00B1</string>
    <string name="modulo">\u0025</string>
    <string name="dot">\u2022</string>
    <string name="equal">\u003D</string>
</resources>
