<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_memory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#000"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#000"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_output"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#000"
                        android:gravity="end"
                        android:textColor="#fff"
                        android:textSize="32sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_memory_add"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="memoryAddClicked"
                        android:text="@string/memory_add"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_memory_subtract"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="memorySubtractClicked"
                        android:text="@string/memory_subtract"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_memory_recall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="memoryRecallClicked"
                        android:text="@string/memory_recall"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_memory_clear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="memoryClearClicked"
                        android:text="@string/memory_clear"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_clear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="clearAllClicked"
                        android:text="@string/all_clear"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_plus_minus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/plus_minus"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_modulo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="percentageClicked"
                        android:text="@string/modulo"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_division"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="divisionClicked"
                        android:text="@string/division"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_seven"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/seven"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_eight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/eight"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_nine"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/nine"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_multiplication"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="multiplicationClicked"
                        android:text="@string/multiplication"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_four"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/four"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_five"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/five"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_six"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/six"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_subtraction"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="subtractionClicked"
                        android:text="@string/subtraction"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_one"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/one"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_two"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/two"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_three"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/three"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_addition"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="additionClicked"
                        android:text="@string/addition"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

                <com.example.casestudy1.CustomizedLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/btn_zero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/button_margin"
                        android:layout_weight="2"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="operandClicked"
                        android:text="@string/zero"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_dot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/digit_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="dotClicked"
                        android:text="@string/dot"
                        android:textSize="@dimen/button_font_size" />

                    <Button
                        android:id="@+id/btn_equals"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@color/left_operator_background"
                        android:fontFamily="sans-serif-light"
                        android:onClick="equalClicked"
                        android:text="@string/equal"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_font_size" />
                </com.example.casestudy1.CustomizedLinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>